--- a/perfilCompletoTarjeta.html
+++ b/perfilCompletoTarjeta.html
@@ -120,12 +120,12 @@
 
                 <div class="card ms-1 mb-3">
                   <div class="card-body">
-                    <img src="https://i.imgur.com/2ISgYja.png" width="40"><span class="ms-5">Mastercard</span><span class="ms-5">Tarjeta acabada en ···· 0098</span><span class="ms-5">04/24</span><span class="ms-5"><a href="#" class="btn btn-warning">Editar</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Borrar</a></span>
+                    <img src="https://i.imgur.com/2ISgYja.png" width="40" alt="Logo de la empresa Mastercard"><span class="ms-5">Mastercard</span><span class="ms-5">Tarjeta acabada en ···· 0098</span><span class="ms-5">04/24</span><span class="ms-5"><a href="#" class="btn btn-warning">Editar</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Borrar</a></span>
                   </div>
                 </div>
                 <div class="card ms-1 mb-3">
                   <div class="card-body">
-                    <img src="https://i.imgur.com/W1vtnOV.png" width="40"><span class="ms-5">Visa</span><span class="ms-5"></span><span class="ms-1"></span><span class="ms-5">Tarjeta acabada en ···· 0098</span><span class="ms-5">04/24</span><span class="ms-5"><a href="#" class="btn btn-warning">Editar</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Borrar</a></span>
+                    <img src="https://i.imgur.com/W1vtnOV.png" width="40" alt="Logo de la empresa Visa"><span class="ms-5">Visa</span><span class="ms-5"></span><span class="ms-1"></span><span class="ms-5">Tarjeta acabada en ···· 0098</span><span class="ms-5">04/24</span><span class="ms-5"><a href="#" class="btn btn-warning">Editar</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Borrar</a></span>
                   </div>
                 </div>
 
