--- a/terminosYCondiciones.html
+++ b/terminosYCondiciones.html
@@ -77,7 +77,7 @@
       </section>
 
       <div class="container py-3">
-        <div class="container mt-5">
+        <div class="container">
           <section class="bg-img pt-1">
             <div class="container mb-2">
               <div class="row align-items-center">
