--- a/terminosYCondiciones.html
+++ b/terminosYCondiciones.html
@@ -59,8 +59,25 @@
     </div>
 
     <main class="my-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Términos y condiciones</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+
       <div class="container py-3">
-        <div class="container mt-5">
+        <div class="container">
           <section class="bg-img pt-1">
             <div class="container mb-2">
               <div class="row align-items-center">
