--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -85,7 +85,7 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <input type="radio" name="Ida" id="ida1" value="ida1" required>
+                                <fieldset><input type="radio" name="Ida" id="ida1" value="ida1" required></fieldset>
                               </div>
                               <div class="col-2">
                                   <h4 id="salida1">06:50 </h4>
