--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -129,7 +129,7 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <input type="radio" name="Ida" id="ida2" value="ida2" required>
+                                <fieldset><input type="radio" name="Ida" id="ida2" value="ida2" required></fieldset>
                               </div>
                               <div class="col-2 ">
                                   <h4 id="salida2">13:55 </h4>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <input type="radio" name="Ida" id="ida3" value="ida3" required>
+                                <fieldset><input type="radio" name="Ida" id="ida3" value="ida3" required></fieldset>
                               </div>
                               <div class="col-2">
                                   <h4 id="salida3">21:00 </h4>
