--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -88,7 +88,8 @@
                                 <fieldset><input type="radio" name="Ida" id="ida1" value="ida1" required></fieldset>
                               </div>
                               <div class="col-2">
-                                  <h4 id="salida1">06:50 </h4>
+                                Hora de salida:
+                                <p id="salida1"><b>06:50</b></p>
                               </div>
                               <div class="col-5 "></div>
                               <div class="col-2 ">
@@ -177,7 +178,8 @@
                                 <fieldset><input type="radio" name="Ida" id="ida3" value="ida3" required></fieldset>
                               </div>
                               <div class="col-2">
-                                  <h4 id="salida3">21:00 </h4>
+                                  <h4 id="salida3">21:00</h4>
+                                  
                               </div>
                               <div class="col-5 ">
                               </div>
