--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -85,7 +85,7 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <fieldset><input type="radio" name="Ida" id="ida1" value="ida1" required></fieldset>
+                                <fieldset><input type="radio" name="Ida" id="ida1" value="ida1" title="Selecciona viaje" required></fieldset>
                               </div>
                               <div class="col-2">
                                 Hora de salida:
@@ -133,7 +133,7 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <fieldset><input type="radio" name="Ida" id="ida2" value="ida2" required></fieldset>
+                                <fieldset><input type="radio" name="Ida" id="ida2" value="ida2" title="Selecciona viaje" required></fieldset>
                               </div>
                               <div class="col-2 ">
                                 Hora de salida:
@@ -182,7 +182,7 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <fieldset><input type="radio" name="Ida" id="ida3" value="ida3" required></fieldset>
+                                <fieldset><input type="radio" name="Ida" id="ida3" value="ida3" title="Selecciona viaje" required></fieldset>
                               </div>
                               <div class="col-2">
                                 Hora de salida:
