--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -58,6 +58,17 @@
   </div>
     
     <main class="py-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Búsqueda de vuelo</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
       <div class="container mt-5">
         <section class="bg-img pt-5">
           <div class="container mb-4">
@@ -68,7 +79,7 @@
             </div>
           </div>
         </section>
-            <form action="seguros.html">
+            <form action="segurosIda.html">
                     <section>
                         <div class="row border" >
                           <div class="container">
