--- a/infoReservaIda.html
+++ b/infoReservaIda.html
@@ -65,8 +65,8 @@
           <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
-              <li class="breadcrumb-item active" aria-current="page"><a href="buscarVuelosIdaYVuelta.html">Búsqueda vuelo</a></li>
-              <li class="breadcrumb-item active" aria-current="page"><a href="seguros.html">Seguros</a></li>
+              <li class="breadcrumb-item active" aria-current="page"><a href="buscarVueloIda.html">Búsqueda de vuelo</a></li>
+              <li class="breadcrumb-item active" aria-current="page"><a href="segurosIda.html">Seguros</a></li>
               <li class="breadcrumb-item active" aria-current="page">Reserva correcta</li>
             </ol>
           </nav>
