--- a/chat.html
+++ b/chat.html
@@ -178,7 +178,7 @@
       </div>
   
       <div class="col-xl-3 col-sm-6 mb-2">
-        <h5>Ayuda</h5>
+        <h5><a href="paginaAyuda.html" class="nav-link p-0 text-dark">Ayuda</a></h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
           <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
