--- a/terminosYCondiciones.html
+++ b/terminosYCondiciones.html
@@ -65,6 +65,7 @@
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="paginaAyuda.html">Página de ayuda</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Términos y condiciones</li>
               </ol>
             </nav>
