--- a/paginaAyuda.html
+++ b/paginaAyuda.html
@@ -60,6 +60,16 @@
 
   <main class="my-5">
     <section class="bg-img pt-5">
+      <div class="container">
+        <div class="col">
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Página de Ayuda</li>
+            </ol>
+          </nav>
+        </div>
+      </div>
       <div class="container mb-4">
         <div class="row align-items-center">
           <div class="col">
