--- a/segurosIda.html
+++ b/segurosIda.html
@@ -113,7 +113,7 @@
                           <h3 class="text-center">200,00€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <input type="radio"  name="btnradio" id="btnradio1"  required >
+                          <fieldset><input type="radio"  name="btnradio" id="btnradio1"  required ></fieldset>
                         </div>
                         <br>
                       </div>
@@ -132,7 +132,7 @@
                           <h3 class="text-center">94,99€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <input type="radio"  name="btnradio" id="btnradio2"  required >
+                          <fieldset><input type="radio"  name="btnradio" id="btnradio2"  required ></fieldset>
                         </div>
                         <br>
                       </div>
@@ -149,7 +149,7 @@
                           <h3 class="text-center">Gratuito</h3> <br>
                         </div>
                         <div class="row text-center" >
-                          <input type="radio"   name="btnradio" id="btnradio3"  required>
+                          <fieldset><input type="radio"   name="btnradio" id="btnradio3"  required></fieldset>
                         </div>
                         <br>
                       </div>
@@ -163,7 +163,7 @@
               <div class="row align-items-center">
                   <div class="col-4"></div>
                   <div class="col-4 text-center">
-                    <input class="btn btn-warning mb-3" id="submit" type="submit" value="Confirmar" >
+                    <fieldset><input class="btn btn-warning mb-3" id="submit" type="submit" value="Confirmar" ></fieldset>
                   </div>
                   <div class="col-4"></div>
                 </div>
