--- a/seguros.html
+++ b/seguros.html
@@ -99,7 +99,7 @@
               <div class="col-10">
                 <div class="row">
                   <div class="col-4">
-                    <div class="btn" for="btnradio1">
+                    <div class="btn">
                       <div class="card mx-2 mb-4">
                         <div class="card-header bg-dark text-light">
                           <h5> Seguro Premium</h5>
@@ -120,7 +120,7 @@
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="btn " for="btnradio2">
+                    <div class="btn" >
                       <div class="card mx-2 mb-4" >
                         <div class="card-header bg-warning text-dark">
                           <h5> Seguro Medio</h5>
@@ -139,7 +139,7 @@
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="btn" for="btnradio3">
+                    <div class="btn">
                       <div class="card mx-2 mb-4">
                         <div class="card-header bg-dark text-light">
                           <h5>Seguro Basico</h5>
