--- a/buscarVueloIda.html
+++ b/buscarVueloIda.html
@@ -7,6 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>buscarVueloIda</title>
+    <style>
+      .formulario input[type="radio"]{
+        display: none;
+      }
+      .formulario label{
+        color: black;
+        background: #fbff0060;
+        padding: 30px 15px;
+        display: inline-block;
+        font-size: 1em;
+        border-radius: 3px;
+        cursor: pointer;
+        -webkit-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+      }
+      .formulario label:hover{
+        background: #ffcc00a6;
+      }
+      .formulario label:before{
+        content: "";
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+        background: none;
+        border: 3px solid black;
+        border-radius: 50%;
+      }
+      .formulario input[type="radio"]:checked + label{
+        background: #ffcc00;
+      } 
+    </style>
 </head>
 <body>
   <div class="bg-dark fixed-top">
@@ -79,7 +111,7 @@
             </div>
           </div>
         </section>
-            <form action="segurosIda.html">
+            <form action="segurosIda.html" class="formulario">
                     <section>
                         <div class="row border" >
                           <div class="container">
@@ -96,7 +128,10 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <fieldset><input type="radio" name="Ida" id="ida1" value="ida1" title="Selecciona viaje" required></fieldset>
+                                <fieldset>
+                                  <input type="radio" name="Ida" id="ida1" value="ida1" title="Selecciona viaje" required>
+                                  <label for="ida1"><b>Reserva</b></label>
+                                </fieldset>
                               </div>
                               <div class="col-2">
                                 Hora de salida:
@@ -144,7 +179,11 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <fieldset><input type="radio" name="Ida" id="ida2" value="ida2" title="Selecciona viaje" required></fieldset>
+                                <fieldset>
+                                  <input type="radio" name="Ida" id="ida2" value="ida2" title="Selecciona viaje">
+                                  <label for="ida2"><b>Reserva</b></label>
+                                </fieldset>
+                                
                               </div>
                               <div class="col-2 ">
                                 Hora de salida:
@@ -193,7 +232,11 @@
                             </div>
                             <div class="row">
                               <div class="col-1 text-center">
-                                <fieldset><input type="radio" name="Ida" id="ida3" value="ida3" title="Selecciona viaje" required></fieldset>
+                                <fieldset>
+                                  <input type="radio" name="Ida" id="ida3" value="ida3" title="Selecciona viaje" required>
+                                  <label for="ida3"><b>Reserva</b></label>
+                                </fieldset>
+                                
                               </div>
                               <div class="col-2">
                                 Hora de salida:
