--- a/segurosIda.html
+++ b/segurosIda.html
@@ -99,7 +99,7 @@
               <div class="col-10">
                 <div class="row">
                   <div class="col-4">
-                    <div class="btn" for="btnradio1">
+                    <div class="btn">
                       <div class="card mx-2 mb-4">
                         <div class="card-header bg-dark text-light">
                           <h5> Seguro Premium</h5>
@@ -113,14 +113,14 @@
                           <h3 class="text-center">200,00€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <fieldset><input type="radio"  name="btnradio" id="btnradio1"  required ></fieldset>
+                          <fieldset><input type="radio"  name="btnradio" id="btnradio1" title="Seleccionar" required ></fieldset>
                         </div>
                         <br>
                       </div>
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="btn " for="btnradio2">
+                    <div class="btn ">
                       <div class="card mx-2 mb-4" >
                         <div class="card-header bg-warning text-dark">
                           <h5> Seguro Medio</h5>
@@ -132,14 +132,14 @@
                           <h3 class="text-center">94,99€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <fieldset><input type="radio"  name="btnradio" id="btnradio2"  required ></fieldset>
+                          <fieldset><input type="radio"  name="btnradio" id="btnradio2" title="Seleccionar" required ></fieldset>
                         </div>
                         <br>
                       </div>
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="btn" for="btnradio3">
+                    <div class="btn">
                       <div class="card mx-2 mb-4">
                         <div class="card-header bg-dark text-light">
                           <h5>Seguro Basico</h5>
@@ -149,7 +149,7 @@
                           <h3 class="text-center">Gratuito</h3> <br>
                         </div>
                         <div class="row text-center" >
-                          <fieldset><input type="radio"   name="btnradio" id="btnradio3"  required></fieldset>
+                          <fieldset><input type="radio"   name="btnradio" id="btnradio3" title="Seleccionar" required></fieldset>
                         </div>
                         <br>
                       </div>
