--- a/seguros.html
+++ b/seguros.html
@@ -9,6 +9,35 @@
     <link rel="icon" type="image/x-icon" href="img/airplane.png">
     <link rel="stylesheet" href="styleBuscarVuelos.css">
     <title>Seguros</title>
+    <style>
+      .formulario input[type="radio"]{
+        display: none;
+      }
+      .formulario label{
+        color: black;
+        background: #fbff0060;
+        padding: 20px 50px;
+        display: inline-block;
+        font-size: 1em;
+        border-radius: 10px;
+        cursor: pointer;
+        -webkit-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+      }
+      .formulario label:hover{
+        background: #ffcc00a6;
+      }
+      .formulario label:before{
+        display: inline-block;
+        background: none;
+        border-radius: 50%;
+      }
+      .formulario input[type="radio"]:checked + label{
+        background: #ffcc00;
+        border: 5px solid black;
+      } 
+    </style>
 </head>
 <body>
   <div class="bg-dark fixed-top">
@@ -93,7 +122,7 @@
       </section>
 
       <div class="container">
-        <form method="post" action="infoReserva.html">
+        <form method="post" action="infoReserva.html" class="formulario">
             <div class="row">
               <div class="col"></div>
               <div class="col-10">
@@ -113,7 +142,10 @@
                           <h3 class="text-center">200,00€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <fieldset><input type="radio"  name="btnradio" id="btnradio1" title="Seleccionar" required ></fieldset>
+                          <fieldset>
+                            <input type="radio"  name="btnradio" id="btnradio1" title="Seleccionar" required >
+                            <label for="btnradio1"><b>Seleccionar</b></label>
+                          </fieldset>
                         </div>
                         <br>
                       </div>
@@ -132,7 +164,10 @@
                           <h3 class="text-center">94,99€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <fieldset><input type="radio"  name="btnradio" id="btnradio2" title="Seleccionar" required ></fieldset>
+                          <fieldset>
+                            <input type="radio"  name="btnradio" id="btnradio2" title="Seleccionar" required >
+                            <label for="btnradio2"><b>Seleccionar</b></label>
+                          </fieldset>
                         </div>
                         <br>
                       </div>
@@ -149,7 +184,10 @@
                           <h3 class="text-center">Gratuito</h3> <br>
                         </div>
                         <div class="row text-center" >
-                          <fieldset><input type="radio"   name="btnradio" id="btnradio3" title="Seleccionar" required></fieldset>
+                          <fieldset>
+                            <input type="radio"   name="btnradio" id="btnradio3" title="Seleccionar" required>
+                            <label for="btnradio3"><b>Seleccionar</b></label>
+                          </fieldset>
                         </div>
                         <br>
                       </div>
