--- a/billeteI.html
+++ b/billeteI.html
@@ -19,7 +19,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -188,7 +188,7 @@
         </div>
     
         <div class="col-xl-3 col-sm-6 mb-2">
-          <h5>Ayuda</h5>
+          <h5><a href="paginaAyuda.html" class="nav-link p-0 text-dark">Ayuda</a></h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
             <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
