--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -19,7 +19,7 @@
             </a>
       
             <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-              <form method="post" action="FAQs.html">
+              <form method="get" action="FAQs.html">
                 <div class="container">
                   <div class="row align-items-center">
                     <div class="col-7">
@@ -65,6 +65,7 @@
           <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+              <li class="breadcrumb-item"><a href="paginaAyuda.html">Página de ayuda</a></li>
               <li class="breadcrumb-item active" aria-current="page">Configuración de privacidad</li>
             </ol>
           </nav>
@@ -89,39 +90,39 @@
         </section>
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
-          <form method="post" action="index3.html">
+          <form method="get" action="index3.html">
             <fieldset>
                 <div class="form-check form-switch">
                     <label class="form-check-label" for="flexSwitchCheckDefault1">Almacenar o acceder a informacion en un dispositivo</label>
                     <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Seleccionar anuncios basicos</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault2">Seleccionar anuncios basicos</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault2">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Contenido personalizado</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault3">Contenido personalizado</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault3">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Perfil y muestra de anuncios personalizados</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault4">Perfil y muestra de anuncios personalizados</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault4">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault5">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault5">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault6">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault6">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Utilizar datos de localizacion geografica precisa</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault7">Utilizar datos de localizacion geografica precisa</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault7">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault1">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
+                    <label class="form-check-label" for="flexSwitchCheckDefault8">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault8">
                   </div>
                   
                   <div class="container py-4 p-5">
@@ -148,7 +149,7 @@
       </div>
   
       <div class="col-xl-3 col-sm-6 mb-2">
-        <h5>Ayuda</h5>
+        <h5><a href="paginaAyuda.html" class="nav-link p-0 text-dark">Ayuda</a></h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
           <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
