--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -67,7 +67,7 @@
                 <div class="col-lg-3 col-sm-12">
                     <h1 class="mb-3">Registrarse</h1>
 
-                    <form class="row g-3 needs-validation" method="post" action="index2.html" novalidate>
+                    <form class="row g-3 needs-validation" method="get" action="index2.html" novalidate>
                         <div class="col-md-12">
                             <div class="form-floating">
                                 <input type="text" name="nombre" value="" class="form-control mb-1" id="floatingNombreValidationCustom01" placeholder="Nombre" required/>
@@ -145,7 +145,7 @@
         </div>
     
         <div class="col-xl-3 col-sm-6 mb-2">
-          <h5>Ayuda</h5>
+          <h5><a href="paginaAyuda.html" class="nav-link p-0 text-dark">Ayuda</a></h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
             <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
