--- a/seguros.html
+++ b/seguros.html
@@ -9,6 +9,35 @@
     <link rel="icon" type="image/x-icon" href="img/airplane.png">
     <link rel="stylesheet" href="styleBuscarVuelos.css">
     <title>Seguros</title>
+    <style>
+      .formulario input[type="radio"]{
+        display: none;
+      }
+      .formulario label{
+        color: black;
+        background: #fbff0060;
+        padding: 20px 50px;
+        display: inline-block;
+        font-size: 1em;
+        border-radius: 10px;
+        cursor: pointer;
+        -webkit-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+      }
+      .formulario label:hover{
+        background: #ffcc00a6;
+      }
+      .formulario label:before{
+        display: inline-block;
+        background: none;
+        border-radius: 50%;
+      }
+      .formulario input[type="radio"]:checked + label{
+        background: #ffcc00;
+        border: 5px solid black;
+      } 
+    </style>
 </head>
 <body>
   <div class="bg-dark fixed-top">
@@ -20,7 +49,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -93,13 +122,13 @@
       </section>
 
       <div class="container">
-        <form method="post" action="infoReserva.html">
+        <form method="get" action="infoReserva.html" class="formulario">
             <div class="row">
               <div class="col"></div>
               <div class="col-10">
                 <div class="row">
                   <div class="col-4">
-                    <label class="btn" for="btnradio1">
+                    <div class="btn">
                       <div class="card mx-2 mb-4">
                         <div class="card-header bg-dark text-light">
                           <h5> Seguro Premium</h5>
@@ -113,14 +142,17 @@
                           <h3 class="text-center">200,00€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <input type="radio"  name="btnradio" id="btnradio1"  required >
+                          <fieldset>
+                            <input type="radio"  name="btnradio" id="btnradio1" title="Seleccionar" required >
+                            <label for="btnradio1"><b>Seleccionar</b></label>
+                          </fieldset>
                         </div>
                         <br>
                       </div>
-                    </label>
+                    </div>
                   </div>
                   <div class="col-4">
-                    <label class="btn " for="btnradio2">
+                    <div class="btn" >
                       <div class="card mx-2 mb-4" >
                         <div class="card-header bg-warning text-dark">
                           <h5> Seguro Medio</h5>
@@ -132,14 +164,17 @@
                           <h3 class="text-center">94,99€</h3> <br>
                         </div>
                         <div class="row text-center">
-                          <input type="radio"  name="btnradio" id="btnradio2"  required >
+                          <fieldset>
+                            <input type="radio"  name="btnradio" id="btnradio2" title="Seleccionar" required >
+                            <label for="btnradio2"><b>Seleccionar</b></label>
+                          </fieldset>
                         </div>
                         <br>
                       </div>
-                    </label>
+                    </div>
                   </div>
                   <div class="col-4">
-                    <label class="btn" for="btnradio3">
+                    <div class="btn">
                       <div class="card mx-2 mb-4">
                         <div class="card-header bg-dark text-light">
                           <h5>Seguro Basico</h5>
@@ -149,11 +184,14 @@
                           <h3 class="text-center">Gratuito</h3> <br>
                         </div>
                         <div class="row text-center" >
-                          <input type="radio"   name="btnradio" id="btnradio3"  required>
+                          <fieldset>
+                            <input type="radio"   name="btnradio" id="btnradio3" title="Seleccionar" required>
+                            <label for="btnradio3"><b>Seleccionar</b></label>
+                          </fieldset>
                         </div>
                         <br>
                       </div>
-                    </label>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -163,7 +201,7 @@
               <div class="row align-items-center">
                   <div class="col-4"></div>
                   <div class="col-4 text-center">
-                    <input class="btn btn-warning mb-3" id="submit" type="submit" value="Confirmar" >
+                    <fieldset><input class="btn btn-warning mb-3" id="submit" type="submit" value="Confirmar" title="Seleccionar" ></fieldset>
                   </div>
                   <div class="col-4"></div>
                 </div>
@@ -186,7 +224,7 @@
         </div>
     
         <div class="col-xl-3 col-sm-6 mb-2">
-          <h5>Ayuda</h5>
+          <h5><a href="paginaAyuda.html" class="nav-link p-0 text-dark">Ayuda</a></h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
             <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
