--- a/vueloIdaYVueltaParis.html
+++ b/vueloIdaYVueltaParis.html
@@ -19,7 +19,7 @@
               </a>
         
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <form method="post" action="FAQs.html">
+                <form method="get" action="FAQs.html">
                   <div class="container">
                     <div class="row align-items-center">
                       <div class="col-7">
@@ -60,7 +60,7 @@
       
     <main class="my-5">
         <div class="container">
-            <form method="post" action="seguros.html">
+            <form method="get" action="seguros.html">
                 <article class="mb-3">
                     <div class="container mt-5">
                         <section class="bg-img pt-5">
