--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -19,7 +19,7 @@
             </a>
       
             <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-              <form method="post" action="FAQs.html">
+              <form method="get" action="FAQs.html">
                 <div class="container">
                   <div class="row align-items-center">
                     <div class="col-7">
@@ -99,7 +99,7 @@
 
           <div class="col-5">
 
-            <form method="post" action="perfilCompletoTarjeta.html">
+            <form method="get" action="perfilCompletoTarjeta.html">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingNombre" placeholder="Nombre" required="required">
                 <label for="floatingNombre">Nombre completo de la tarjeta*</label>
