--- a/buscarVuelosIdaYVuelta.html
+++ b/buscarVuelosIdaYVuelta.html
@@ -48,7 +48,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
