--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -19,7 +19,7 @@
             </a>
       
             <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-              <form method="post" action="FAQs.html">
+              <form method="get" action="FAQs.html">
                 <div class="container">
                   <div class="row align-items-center">
                     <div class="col-7">
@@ -90,7 +90,7 @@
         </section>
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
-          <form method="post" action="index3.html">
+          <form method="get" action="index3.html">
             <fieldset>
                 <div class="form-check form-switch">
                     <label class="form-check-label" for="flexSwitchCheckDefault1">Almacenar o acceder a informacion en un dispositivo</label>
