--- a/editarPerfil.html
+++ b/editarPerfil.html
@@ -19,7 +19,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -107,7 +107,7 @@
               <div class="row">
                 <h2 class="mb-3">Datos personales</h2>
                 
-                <form method="post" action="perfilCompleto.html">
+                <form method="get" action="perfilCompleto.html">
                   <div class="form-floating">
                       <input type="text" name="nombre" value="" class="form-control mb-3" id="floatingNombre" placeholder="Nombre"/>
                       <label for="floatingNombre">Nombre</label>
