--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </a>
         
               <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <form method="post" action="FAQs.html">
+                <form method="get" action="FAQs.html">
                   <div class="container">
                     <div class="row align-items-center">
                       <div class="col-7">
@@ -92,7 +92,7 @@
                 <div class="card mb-4">
                   <div class="card-body">
 
-                    <form method="post" action="buscarVuelosIdaYVuelta.html">
+                    <form method="get" action="buscarVuelosIdaYVuelta.html">
                       <div class="row">
                         <div class="col">
                           <div class="form-floating">
@@ -138,7 +138,7 @@
                 <div class="card mb-4">
                   <div class="card-body">
   
-                    <form method="post" action="buscarVueloIda.html">
+                    <form method="get" action="buscarVueloIda.html">
                       <div class="row">
                         <div class="col">
                           <div class="form-floating">
