--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -67,7 +67,7 @@
               <div class="col-lg-3 col-sm-12">
                   <h1 class="mb-3">Iniciar Sesión</h1>
                   
-                  <form method="post" action="index2.html">
+                  <form method="get" action="index2.html">
                       <div class="form-floating">
                           <input type="text" name="email" value="" class="form-control mb-3" id="floatingEmail" placeholder="Email" required/>
                           <label for="floatingEmail">Email</label>
