--- a/segurosIda.html
+++ b/segurosIda.html
@@ -49,7 +49,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -122,7 +122,7 @@
       </section>
 
       <div class="container">
-        <form method="post" action="infoReservaIda.html" class="formulario">
+        <form method="get" action="infoReservaIda.html" class="formulario">
             <div class="row">
               <div class="col"></div>
               <div class="col-10">
