--- a/vueloIda.html
+++ b/vueloIda.html
@@ -19,7 +19,7 @@
           </a>
     
           <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <form method="post" action="FAQs.html">
+            <form method="get" action="FAQs.html">
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-7">
@@ -60,7 +60,7 @@
   
       <main>
           <div class="container">
-              <form method="post" action="seguros.html">
+              <form method="get" action="seguros.html">
                   <article class="mb-3">
                       <div class="row" >
                           <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
